--- a/Manuscript Analyses/manuscript_analysis.Rmd
+++ b/Manuscript Analyses/manuscript_analysis.Rmd
@@ -27,6 +27,7 @@ All data processing and analyses was conducted using R Version 4.3.2
 library(tidyverse) #install.packages("tidyverse")
 library(rio) #install.packages("rio")
 library(gt) #install.packages("gt")
+library(gtsummary) #install.packages("gtsummary")
 library(reshape2) #install.packages("reshape2")
 library(ggcorrplot) #install.packages("ggcorrplot")
 library(patchwork) #install.packages("patchwork")
@@ -39,6 +40,12 @@ library(parameters) #install.packages("parameters")
 library(performance) #install.packages("performance")
 library(bayestestR) #install.packages("bayestestR)
 library(rstanarm) #install.packages("rstanarm")
+
+# Load in dataset
+
+demo <- rio::import("participant_demo.csv")
+
+data <- rio::import("cleaned_data.csv")
 
 ```
 
@@ -78,13 +85,40 @@ training <- function(data, method, int) {
 
 ```
 
+
+```{r}
+
+# Calculating pretest and posttest intelligibility for the listeners
+pl_int <- data %>%
+  dplyr::group_by(id, speaker, type) %>%
+  dplyr::mutate(pwc = (sum(correct_words)/sum(target_number))*100,
+                best_win = ifelse(win_r < win_l, win_r, win_l)) %>%
+  dplyr::summarize(mean_pwc = mean(pwc, na.rm = T),
+                   across(c(contains("_c"), contains("_u"), contains("win")),
+                          ~first(.x)
+                          )) %>%
+  dplyr::ungroup()
+
+# Subsetting age from demo df
+
+age <- demo %>%
+  select(id, age)
+
+# Merging listener age into pl_int
+
+pl_int <- dplyr::left_join(age, pl_int, by = "id")
+
+```
+
+
+
 # Descriptives
 
 ## Participant Demographics
 
-```{r}
+TBD
 
-demo <- rio::import("participant_demo.csv")
+```{r}
 
 
 
@@ -94,28 +128,47 @@ demo <- rio::import("participant_demo.csv")
 
 ```{r}
 
-cog <- rio::import("cleaned_data.csv") %>%
-  dplyr::select(c(id, speaker, list_sort_c:win_l)) %>%
-  dplyr::mutate(best_win = ifelse(win_r < win_l, win_r, win_l)) %>%
-  dplyr::distinct()
+int_table <- pl_int %>%
+  dplyr::filter(type == "pretest") %>%
+  dplyr::select(id, speaker, age, ends_with("_c"), best_win) %>%
+  dplyr::select(-fluid_cog_c) %>%
+  dplyr::rename(
+    `Working Memory` = list_sort_c,
+    `Inhibitory Control` = flanker_c,
+    `Cognitive Flexibility` = card_sort_c,
+    `Receptive Vocabulary` = vocab_c,
+    `Processing Speed` = pattern_c,
+    `Picture Sequence Memory` = pic_seq_c,
+    `Words in Noise Threshold` = best_win
+  ) %>%
+  group_by(id, speaker) %>% 
+  summarize(across(everything(), first)) %>% 
+  ungroup() %>% 
+  select(-id) %>% 
+  tbl_summary(
+    by = "speaker",
+    statistic = list(all_continuous() ~ "{mean} ({sd})"),
+    missing = "no",
+    digits = list(everything() ~ c(2))
+  ) %>% 
+  add_p() %>%
+  as_gt() 
 
-age <- demo %>%
-  select(id, age)
+int_table
 
-cog_scores <- left_join(age, cog, by = "id")
+int_table %>%
+  gt::gtsave("Tables/means_tabel.html")
 
-cog_scores %>%
-  dplyr::group_by(speaker) %>%
-  furniture::table1(age, list_sort_c, flanker_c, card_sort_c, vocab_c, pattern_c, 
-                    pic_seq_c, fluid_cog_c, best_win,
-                    test = T, type = c("simple", "condensed"), 
-                    export = "cog_score")
+```
+
+## Intelligibility
+
+```{r}
+
+# Intelligibiltiy Descriptives Table
+
+
 
 ```
 
 
-## Intelligibility
-
-
-
-## Hearing Threshold
