--- a/Manuscript Analyses/manuscript_analysis.Rmd
+++ b/Manuscript Analyses/manuscript_analysis.Rmd
@@ -40,6 +40,8 @@ library(parameters) #install.packages("parameters")
 library(performance) #install.packages("performance")
 library(bayestestR) #install.packages("bayestestR)
 library(rstanarm) #install.packages("rstanarm")
+library(afex) #install.packages("afex")
+
 
 # Load in dataset
 
@@ -53,6 +55,19 @@ data <- rio::import("cleaned_data.csv")
 ```{r, echo = F, warning = F, message = F}
 
 # Functions used in this code
+
+## Plot importance function
+plot_importance = function(mods, labels){
+  map2(mods, labels, ~var_imp(.x, .y)) %>% 
+    reduce(full_join, by = "var") %>% 
+    ungroup() %>% 
+    pivot_longer(-var) %>% 
+    group_by(var) %>% 
+    mutate(avg_imp = mean(value, na.rm=TRUE)) %>% 
+    ungroup() %>% 
+    arrange(avg_imp) %>% 
+    mutate(var = fct_inorder(var))
+}
 
 ## Function for determining variable importance
 var_imp <- function(mod, label) {
@@ -231,11 +246,11 @@ cor_df <- pl_int %>%
   tidyr::pivot_wider(names_from = type,
                      values_from = mean_pwc) %>%
   dplyr::mutate(improvement = posttest - pretest) %>%
-  dplyr::select(id, speaker, ends_with("_c"), best_win, pretest, improvement)
+  dplyr::select(id, speaker, ends_with("_c"), best_win, pretest, posttest, improvement)
 
 AM1_cor <- cor_df %>%
   dplyr::filter(speaker == "AM1") %>%
-  dplyr::select(!c(id, speaker, fluid_cog_c)) %>%
+  dplyr::select(!c(id, speaker, fluid_cog_c, posttest)) %>%
   dplyr::rename(
     `Working Memory` = list_sort_c,
     `Inhibitory Control` = flanker_c,
@@ -267,7 +282,7 @@ AM1_cor
 
 PDM10_cor <- cor_df %>%
   dplyr::filter(speaker == "PDM10") %>%
-  dplyr::select(!c(id, speaker, fluid_cog_c)) %>%
+  dplyr::select(!c(id, speaker, fluid_cog_c, posttest)) %>%
   dplyr::rename(
     `Working Memory` = list_sort_c,
     `Inhibitory Control` = flanker_c,
@@ -298,6 +313,44 @@ PDM10_cor
 library(patchwork)
 AM1_cor + PDM10_cor + plot_layout(guides = "collect") & theme(legend.position = "bottom")
 ggsave("Plots/cor_fig.png", width = 20, height = 6, dpi = 300, units = "in")
+
+```
+
+## Pre-Post Change
+
+```{r}
+
+cor_df %>% 
+  dplyr::select(id, speaker, pretest, posttest) %>% 
+  tidyr::pivot_longer(pretest:posttest) %>% 
+  dplyr::group_by(speaker) %>% 
+  dplyr::group_nest() %>% 
+  dplyr::mutate(
+    mod = map(data, ~afex::aov_4(value ~ 1 + (name|id), data = .x))
+  ) %>% 
+  pull(mod)
+
+cor_df %>% 
+  dplyr::select(id, speaker, pretest, posttest) %>% 
+  tidyr::pivot_longer(pretest:posttest) %>% 
+  dplyr::group_by(speaker) %>% 
+  dplyr::group_nest() %>% 
+  dplyr::mutate(
+    mod = map(data, ~effectsize::cohens_d(value ~ name, data = .x))
+  ) %>% 
+  pull(mod)
+
+```
+
+## Models of Initial Intelligibility
+
+### Cognition
+
+TBD
+
+```{r}
+
+
 
 ```
 
